<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>



        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".fragment.main.ui.TeasProducerAddFragment">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvAddProducer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tvAddProducer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:gravity="center"
                            android:text="@string/add_producer"
                            android:textSize="25sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:hint="@string/enter_name"
                            android:inputType="text"
                            android:padding="@dimen/_20sdp"
                            android:textSize="15sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvAddProducer" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/etCity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:hint="@string/enter_city"
                            android:inputType="text"
                            android:padding="@dimen/_20sdp"
                            android:textSize="15sp"
                            app:layout_constraintEnd_toEndOf="@id/etName"
                            app:layout_constraintStart_toStartOf="@id/etName"
                            app:layout_constraintTop_toBottomOf="@id/etName" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnAddProducer"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/add_product"
                            android:textAllCaps="false"
                            android:textSize="20sp"
                            app:layout_constraintStart_toStartOf="@id/etName"
                            app:layout_constraintEnd_toEndOf="@id/etName"
                            app:layout_constraintTop_toBottomOf="@id/etCity" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnSeeProducer"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:text="@string/see_product"
                            android:textAllCaps="false"
                            android:textSize="20sp"
                            app:layout_constraintStart_toStartOf="@id/etName"
                            app:layout_constraintEnd_toEndOf="@id/etName"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/btnAddProducer" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvAddOr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cvAddProducer" />


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvAddTeas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAddOr">


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/tvAddTea"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:gravity="center"
                            android:text="@string/add_teas"
                            android:textSize="25sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/tvTeaId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:hint="@string/enter_id"
                            android:inputType="text"
                            android:padding="@dimen/_20sdp"
                            android:textSize="15sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvAddTea" />


                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/tvTeaName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:hint="@string/enter_name"
                            android:inputType="text"
                            android:padding="@dimen/_20sdp"
                            android:textSize="15sp"
                            app:layout_constraintEnd_toEndOf="@id/tvTeaId"
                            app:layout_constraintStart_toStartOf="@id/tvTeaId"
                            app:layout_constraintTop_toBottomOf="@id/tvTeaId" />

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/tvTeasDesc"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:hint="@string/enter_desc"
                            android:inputType="text"
                            android:padding="@dimen/_20sdp"
                            android:textSize="15sp"
                            app:layout_constraintEnd_toEndOf="@id/tvTeaId"
                            app:layout_constraintStart_toStartOf="@id/tvTeaId"
                            app:layout_constraintTop_toBottomOf="@id/tvTeaName" />


                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/tvTeasPrice"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:hint="@string/enter_price"
                            android:inputType="text"
                            android:padding="@dimen/_20sdp"
                            android:textSize="15sp"
                            app:layout_constraintEnd_toEndOf="@id/tvTeaId"
                            app:layout_constraintStart_toStartOf="@id/tvTeaId"
                            app:layout_constraintTop_toBottomOf="@id/tvTeasDesc" />


                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnAddTeas"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/add_teas"
                            android:textAllCaps="false"
                            android:textSize="20sp"
                            app:layout_constraintStart_toStartOf="@id/tvTeaId"
                            app:layout_constraintEnd_toEndOf="@id/tvTeaId"
                            app:layout_constraintTop_toBottomOf="@id/tvTeasPrice" />


                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnSeeTea"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:text="@string/see_teas"
                            android:textAllCaps="false"
                            android:textSize="20sp"
                            app:layout_constraintStart_toStartOf="@id/tvTeaId"
                            app:layout_constraintEnd_toEndOf="@id/tvTeaId"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/btnAddTeas" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>


                <ProgressBar
                    android:id="@+id/pbProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_170sdp"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/black"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>



</layout>